# zero2prod

./: Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20240326220923_create_subscriptions_table.sql  20250401180810_add_status_to_subscriptions.sql  20250401184039_make_status_not_null_in_subscriptions.sql  20250401185202_create_subscription_tokens_table.sql  20250528210419_create_users_table.sql  20250529201954_rename_password_column.sql
scripts/: init_db.bat  init_db.sh  watch.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: greet.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
test_cleanup/: clean_db.rs
tests/: configuration.rs  health_check.rs
tests/api/: greet.rs  health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
