[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "^0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"]}
env_logger = "0.11.7"
log = "0.4.26"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.1"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.16"
serde-aux = "4.6.0"
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
claims = "0.8.0"
validator = "0.20.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[dependencies.sqlx]
version = "^0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
fake = { version = "4.0.0", features = ["email_address"] }
reqwest = "^0.12"

